--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
+  "name": "scene-locker",
+  "version": "0.0.1",
+  "description": "Scene-Locking Discord Bot for Game Developer",
+  "main": "src/main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Made Indrayana",
+  "license": "MIT",
+
   "dependencies": {
-    "discord.js": "^12.5.3"
+    "discord.js": "^12.5.3",
+    "sequelize": "^6.6.4",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "eslint": "^7.30.0"
