--- a/config.json
+++ b/config.json
@@ -1,6 +1,4 @@
 {
   "token": "Your Discord bot token",
-  "prefix": "!",
-  "dbUsername": "yourDatabaseUsername",
-  "dbPassword": "yourDatabasePassword"
+  "prefix": "!"
 }
