Adjusted linter profile to not be so restrictive about curly braces

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
 		"comma-dangle": ["error", "always-multiline"],
 		"comma-spacing": "error",
 		"comma-style": "error",
-		"curly": ["error", "multi-line", "consistent"],
+		"curly": ["error", "multi-or-nest"],
 		"dot-location": ["error", "property"],
 		"handle-callback-err": "off",
 		"indent": ["error", "tab"],
