--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
 		"curly": ["error", "multi-or-nest"],
 		"dot-location": ["error", "property"],
 		"handle-callback-err": "off",
-		"indent": ["error", "tab"],
+		"indent": ["error", 4],
 		"max-nested-callbacks": ["error", { "max": 4 }],
 		"max-statements-per-line": ["error", { "max": 2 }],
 		"no-console": "off",
