--- a/config.json
+++ b/config.json
@@ -5,5 +5,6 @@
   "errorColor": "B33A3A",
   "warningColor": "F09030",
   "warningTitle": "Oops :flushed:",
-  "errorTitle": "Error :grimacing:"
+  "errorTitle": "Error :grimacing:",
+  "helpTitle": "Help :nerd:"
 }
