Rewritten database to PostgreSQL

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.9.9",
   "description": "Object-Locking Discord Bot for Game Developer, especially those who are using git and doesn't have the 'lock/checkout' function of SVN/Perforce.",
   "main": "src/main.js",
+  "engines": {
+    "node": "16.7.0",
+    "npm": "7.21.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ."
@@ -12,6 +16,8 @@
   "dependencies": {
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.4",
     "sqlite3": "^5.0.2"
   },
