--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "discord.js": "^14.7.1",
     "dotenv": "^10.0.0",
+    "log-timestamp": "^0.3.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.4",
