--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy-cmd": "node src/deploy-commands.js",
     "start": "nodemon ."
   },
   "author": "Made Indrayana",
